tests/negative/parse_error2.sans
// expect-error: PARSE ERR
main() I {
  if { 42 }
}
